--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://i.ibb.co/6cttSjgt/favicon-32x32.png"
+      href="/src/assets/images/logo.webp"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/style.css" rel="stylesheet">
